<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/share_all_files_with_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_files_with_dialog"
            android:padding="8dp"
            android:textSize="14sp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/share_all_files"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_files"
            android:padding="8dp"
            android:textSize="14sp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/share_all_files_with_dialog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/share_image_video_pdf_files"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_image_video_pdf_files"
            android:padding="8dp"
            android:textSize="14sp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/share_all_files"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/share_image_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_image_file"
            android:padding="8dp"
            android:textSize="14sp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/share_image_video_pdf_files"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


        <Button
            android:id="@+id/share_video_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_video_file"
            android:padding="8dp"
            android:textSize="14sp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/share_image_file"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


        <Button
            android:id="@+id/share_pdf_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_pdf_file"
            android:padding="8dp"
            android:textSize="14sp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/share_video_file"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>